--- a/anim.less
+++ b/anim.less
@@ -1,11 +1,18 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto:300,400);
+
 
 @grey: #f0f0f0;
 @shadow: rgba(0,0,0,0.165);
 @highlight: #55beeb;
 @bg-col: #333;
 
-@pen-width: 768px;
+@elem-width: 334px;
+@elem-height: 48px;
+@blue: #0099cc;
+@input-border: 2px solid @blue;
+@roboto: "Roboto", sans-serif;
+
 
 .transition (@value1,@value2:X,...) {
     @value: ~`"@{arguments}".replace(/[\[\]]|\,\sX/g, '')`;
@@ -26,7 +33,7 @@ body {
 }
 
 .pen {
-	max-width: @pen-width;
+	max-width: @elem-width;
 	margin: 0 auto;
 
 	img {
@@ -74,6 +81,59 @@ body {
 }
 
 // Pen-related
+
+* {
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 .wa-input-container {
-	
+	background: white;
+	width: @elem-width;
+	height: @elem-height;
+
+	.wa-input {
+		border-bottom: @input-border;
+		width: 260px;
+		margin: 0 auto;
+		height: 40px;
+		position: relative;
+		line-height: 2;
+		padding: 0 10px;
+		border-right: 0;
+		display: block;
+		border-top: 0;
+		border-left: 0;
+
+		input[type=text] {
+			border-top: none;
+			border-left: none;
+			border-right: none;
+			border-bottom: none;
+			width:100%;
+			display: block;
+			height: 100%;
+			font-size: 20px;
+			font-family: @roboto;
+			font-weight: 300;
+
+			&:focus {
+				outline: 0;
+			}
+		}
+
+		&:before,
+		&:after {
+			height: 6px;
+			border-left: @input-border;
+			position: absolute;
+			content:'';
+			display: block;
+			bottom: 0;
+		}
+		
+		&:before { left: 0; }
+		&:after { right: 0; }
+
+	}
 }
