--- a/anim.less
+++ b/anim.less
@@ -7,11 +7,13 @@
 @highlight: #55beeb;
 @bg-col: #333;
 
-@elem-width: 334px;
-@elem-height: 48px;
+@elem-width: 310px;
+@elem-height: 38px;
 @blue: #0099cc;
+@grey: #f1f1f1;
 @input-border: 2px solid @blue;
 @roboto: "Roboto", sans-serif;
+@hover-width: 230px;
 
 
 .transition (@value1,@value2:X,...) {
@@ -23,9 +25,18 @@
     transition: @value;
 }
 
+.animation (...) {
+  -webkit-animation: @arguments;  
+     -moz-animation: @arguments;
+      -ms-animation: @arguments;
+       -o-animation: @arguments;
+          animation: @arguments;
+}
+
 // -- Codepen related --
 body {
-  padding: 3em 2em;
+  padding: 0 0 3em;
+  margin: 0;
   font-family: 'Open Sans', Arial, sans-serif;
   font-size: 1em;
   line-height: 1;
@@ -33,8 +44,12 @@ body {
 }
 
 .pen {
-	max-width: @elem-width;
+	max-width: 1392px;
+	height: 754px;
 	margin: 0 auto;
+	background: url(img/background.jpg) center 0 no-repeat;
+	background-size: auto;
+	position: relative;
 
 	img {
 		margin-left: 15px;
@@ -45,7 +60,7 @@ body {
 	display: block;
 	max-width: 400px;
 	text-align: center;
-	margin: 75px auto 0;
+	margin: 0 auto;
 	padding: 0;
 	font-size: 0.8em;
 	color: @grey;
@@ -88,17 +103,22 @@ body {
 }
 
 .wa-input-container {
-	background: white;
+	background: @grey;
 	width: @elem-width;
+	position: relative;
+	margin: 0 auto;
+	height: 48px;
+	top: 390px;
 	height: @elem-height;
 
 	.wa-input {
 		border-bottom: @input-border;
-		width: 260px;
+		width: 228px;
 		margin: 0 auto;
-		height: 40px;
+		height: 33px;
 		position: relative;
 		line-height: 2;
+		z-index: 1;
 		padding: 0 10px;
 		border-right: 0;
 		display: block;
@@ -106,16 +126,14 @@ body {
 		border-left: 0;
 
 		input[type=text] {
-			border-top: none;
-			border-left: none;
-			border-right: none;
-			border-bottom: none;
+			border:0;
 			width:100%;
 			display: block;
 			height: 100%;
-			font-size: 20px;
+			font-size: 15px;
 			font-family: @roboto;
 			font-weight: 300;
+			background-color: transparent;
 
 			&:focus {
 				outline: 0;
@@ -124,7 +142,7 @@ body {
 
 		&:before,
 		&:after {
-			height: 6px;
+			height: 4px;
 			border-left: @input-border;
 			position: absolute;
 			content:'';
@@ -136,4 +154,91 @@ body {
 		&:after { right: 0; }
 
 	}
+
+	.speech-container {
+		display: block;
+		position: absolute;
+		height: 38px;
+		z-index: 2;
+		width: @hover-width;
+		right: -@hover-width;
+		.transition(right 500ms);
+
+		.time {
+			font-family: @roboto;
+			font-size: 24px;
+			position: absolute;
+			height: inherit;
+			padding: 0 3px;
+			line-height: 1.5;
+			background: @grey;
+		}
+
+		.swipe-to-cancel {
+			display: block;
+			position: absolute;
+			background: @grey;
+			width: 176px;
+			right: 0;
+			background-repeat: no-repeat;
+			background-position: 150px;
+			background-image: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 25%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 75%, rgba(255,255,255,0) 100%);
+			background-image: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(25%,rgba(255,255,255,0)), color-stop(50%,rgba(255,255,255,1)), color-stop(75%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,0)));
+			background-image: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,1) 50%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
+			background-image: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,1) 50%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
+			background-image: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,1) 50%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
+			background-image: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,1) 50%,rgba(255,255,255,0) 75%,rgba(255,255,255,0) 100%);
+			height:inherit;
+			.animation(swipe 2s infinite);
+
+			&:before {
+				display: block;
+				text-transform: uppercase;
+				content: 'Swipe to cancel';
+				top: 11px;
+				position: relative;
+				text-align: center;
+			}
+		}
+	}
+
+	.ptt-icon {
+		height: 19px;
+		width: 20px;
+		position: absolute;
+		cursor: pointer;
+		
+		&.record-right {
+			top: 10px;
+			right: 10px;
+		}
+
+		&.emoticon {
+			top: 10px;
+			left: 10px;
+		}
+
+		svg {
+			height: inherit;
+			width: inherit;
+			.record-icon {
+				fill: #858583;
+			}
+		}
+	}
+}
+
+@keyframes swipe {
+	from { background-position: 150px;}
+	to { background-position: -150px;}
+}
+
+@-webkit-keyframes swipe {
+	from { background-position: 150px;}
+	to { background-position: -150px;}
+}
+
+@-moz-keyframes swipe {
+	from { background-position: 150px;}
+	to { background-position: -150px;}
 }
