Changed global font-family in wa-input-container to roboto font

--- a/anim.less
+++ b/anim.less
@@ -105,6 +105,7 @@ body {
 .wa-input-container {
 	background: @grey;
 	width: @elem-width;
+	font-family: @roboto;
 	position: relative;
 	margin: 0 auto;
 	height: 48px;
@@ -196,6 +197,7 @@ body {
 				text-transform: uppercase;
 				content: 'Swipe to cancel';
 				top: 11px;
+				font-weight: 300;
 				position: relative;
 				text-align: center;
 			}
