--- a/anim.css
+++ b/anim.css
@@ -64,6 +64,7 @@ body {
 .wa-input-container {
   background: #f1f1f1;
   width: 310px;
+  font-family: "Roboto", sans-serif;
   position: relative;
   margin: 0 auto;
   height: 48px;
@@ -160,6 +161,7 @@ body {
   text-transform: uppercase;
   content: 'Swipe to cancel';
   top: 11px;
+  font-weight: 300;
   position: relative;
   text-align: center;
 }
