--- a/anim.less
+++ b/anim.less
@@ -160,6 +160,7 @@ body {
 		display: block;
 		position: absolute;
 		height: 38px;
+		background: @grey;
 		z-index: 2;
 		width: @hover-width;
 		right: -@hover-width;
@@ -178,9 +179,10 @@ body {
 		.swipe-to-cancel {
 			display: block;
 			position: absolute;
-			background: @grey;
+			// background: @grey;
+			background: red;
 			width: 176px;
-			right: 0;
+			left: 55px;
 			background-repeat: no-repeat;
 			background-position: 150px;
 			background-image: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 25%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 75%, rgba(255,255,255,0) 100%);
