Added jQuery UI's Draggable
Also set an if condition to get an alert when a certain point is
reached.
Changed the trigger behaviour from mouseover to click to prevent
senseless animation starts while reloading the page (just for debuggin
i think)

--- a/anim.less
+++ b/anim.less
@@ -198,7 +198,8 @@ body {
 				display: block;
 				text-transform: uppercase;
 				content: 'Swipe to cancel';
-				top: 11px;
+				top: 13px;
+				font-size: 14px;
 				font-weight: 300;
 				position: relative;
 				text-align: center;
