--- a/anim.less
+++ b/anim.less
@@ -79,21 +79,31 @@ body {padding:0 0 3em;margin:0;font-family:'Open Sans', Arial, sans-serif;font-s
 * {-moz-box-sizing: border-box; box-sizing: border-box;}
 
 .wa-input-container {
-	background: @grey;
+	// background: @grey;
 	width: @elem-width;
 	font-family: @roboto;
 	position: relative;
 	margin: 0 auto;
-	height: 48px;
-	top: 390px;
-	height: @elem-height;
+	top: 259px;
+	height: 170px;
+	overflow: hidden;
+
+	.input-bg {
+		height: @elem-height;
+		position: absolute;
+		bottom: 0;
+		width: inherit;
+		background: @grey;
+	}
 
 	.wa-input {
 		border-bottom: @input-border;
 		width: 228px;
 		margin: 0 auto;
 		height: 33px;
-		position: relative;
+		position: absolute;
+		bottom: 6px;
+		left: 40px;
 		line-height: 2;
 		z-index: 1;
 		padding: 0 10px;
@@ -134,6 +144,7 @@ body {padding:0 0 3em;margin:0;font-family:'Open Sans', Arial, sans-serif;font-s
 		display: block;
 		position: absolute;
 		height: 38px;
+		bottom: 0;
 		background: @grey;
 		z-index: 2;
 		width: @hover-width;
@@ -182,6 +193,15 @@ body {padding:0 0 3em;margin:0;font-family:'Open Sans', Arial, sans-serif;font-s
 		}
 	}
 
+	.bin {
+		// opacity: 0;
+		bottom: -40px;
+		position: absolute;
+		.transition(bottom 500ms);
+
+		&.show {opacity: 1;}
+	}
+
 	.ptt-icon {
 		height: 19px;
 		width: 20px;
@@ -189,13 +209,30 @@ body {padding:0 0 3em;margin:0;font-family:'Open Sans', Arial, sans-serif;font-s
 		cursor: pointer;
 		
 		&.record-right {
-			top: 10px;
+			bottom: 10px;
 			right: 10px;
+		}
+
+		&.bin-base, &.bin-head {
+			bottom: 3px;
+			width: 25px;
+			height: 25px;
+			left: 7px;
+			.transition(all 250ms);
+		}
+
+		&.bin-head.anim {
+			transform: rotate(-80deg);
+			transform-origin:20% 40%;
+			-moz-transform: rotate(-80deg);
+			-moz-transform-origin:20% 40%;
+			-webkit-transform: rotate(-80deg);
+			-webkit-transform-origin:20% 40%;
 		}
 
 		&.record-left {
 			height: 25px;
-			top: 6px;
+			bottom: 6px;
 			opacity: 0;
 			left: 10px;
 			width: 20px;
@@ -205,7 +242,7 @@ body {padding:0 0 3em;margin:0;font-family:'Open Sans', Arial, sans-serif;font-s
 			&.small {
 				height: 20px;
 				width: 15px;
-				top: 9px;
+				bottom: 9px;
 				left: 12px;
 			}
 
@@ -220,8 +257,9 @@ body {padding:0 0 3em;margin:0;font-family:'Open Sans', Arial, sans-serif;font-s
 		}
 
 		&.emoticon {
-			top: 10px;
+			bottom: 10px;
 			left: 10px;
+			.transition(opacity 250ms);
 		}
 
 		svg {
@@ -236,16 +274,14 @@ body {padding:0 0 3em;margin:0;font-family:'Open Sans', Arial, sans-serif;font-s
 
 .hide {opacity: 0;}
 
-@keyframes swipe {from { background-position: 150px;} to { background-position: -150px;}}
-@-moz-keyframes swipe {from { background-position: 150px;} to { background-position: -150px;}}
-@-webkit-keyframes swipe {from { background-position: 150px;} to { background-position: -150px;}}
+@keyframes swipe {from {background-position: 150px;} to {background-position: -150px;}}
+@-moz-keyframes swipe {from {background-position: 150px;} to {background-position: -150px;}}
+@-webkit-keyframes swipe {from {background-position: 150px;} to {background-position: -150px;}}
+
 @keyframes shine {0% {opacity: 1} 60% {opacity: 0.6} 61% {opacity: 0} 100% {opacity: 0}}
 @-moz-keyframes shine {0% {opacity: 1} 60% {opacity: 0.6} 61% {opacity: 0} 100% {opacity: 0}}
 @-webkit-keyframes shine {0% {opacity: 1} 60% {opacity: 0.6} 61% {opacity: 0} 100% {opacity: 0}}
 
-@-webkit-keyframes jump {
-	0% { top: 9px; -webkit-transform: rotate(0deg); opacity: 1; }
-	50% { top: -140px; -webkit-transform: rotate(360deg); opacity: 1; }
-	90% { top: 9px; -webkit-transform: rotate(360deg); opacity: 1; }
-	100% { top: 30px; -webkit-transform: rotate(360deg); opacity: 0; }
-}
+@keyframes jump {0% {transform: rotate(0deg);opacity: 1;} 50% {bottom: 150px;transform: rotate(360deg);opacity: 1;} 85% {transform: rotate(360deg);opacity: 0;} 100% {bottom: -30px;transform: rotate(360deg);opacity: 0;}}
+@-moz-keyframes jump {0% {-moz-transform: rotate(0deg);opacity: 1;} 50% {bottom: 150px;-moz-transform: rotate(360deg);opacity: 1;} 85% {-moz-transform: rotate(360deg);opacity: 0;} 100% {bottom: -30px;-moz-transform: rotate(360deg);opacity: 0;}}
+@-webkit-keyframes jump {0% {-webkit-transform: rotate(0deg);opacity: 1;} 50% {bottom: 150px;-webkit-transform: rotate(360deg);opacity: 1;} 85% {-webkit-transform: rotate(360deg);opacity: 0;} 100% {bottom: -30px;-webkit-transform: rotate(360deg);opacity: 0;}}
